examples/test/testpolicy19479.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19479
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key39: value40
      key37: value29
      key6: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value19
      podSelector:
        matchLabels:
          key29: value30
          key46: value0
          key21: value11
